# SnakeGame

./: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  game.rs
server/: Cargo.toml
server/src/: game.rs  main.rs  snake.rs  user.rs
