

[package]
name = "client"
version = "0.1.0"
edition = "2018"



[dependencies]
piston_window = "0.120.0"
rand = "0.8.4"
tungstenite = {version="0.23.0", features = ["native-tls"]}
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ws = "0.9.2"
url = "2.2"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

